--- a/app/src/main/res/layout/act_inven.xml
+++ b/app/src/main/res/layout/act_inven.xml
@@ -89,7 +89,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.2">
+        android:layout_weight="0.1">
+
+        <CheckBox
+            android:id="@+id/cbFastSell"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="빠른 판매"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1">
 
         <Button
             android:layout_width="0dp"
