--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -63,8 +63,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.2"
-                android:gravity="center"
-                >
+                android:gravity="center">
+
                 <FrameLayout
                     android:layout_width="200dp"
                     android:layout_height="match_parent">
@@ -83,6 +83,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:paddingTop="40dp"
+                    android:paddingRight="10dp"
                     android:src="@drawable/mineworker"
                     android:layout_gravity="right"/>
 
