--- a/app/src/main/res/drawable/border_wp.xml
+++ b/app/src/main/res/drawable/border_wp.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#000"/>
     <stroke
-        android:width="1dp"
-        android:color="#f00"/>
+        android:width="3dp"
+        android:color="#aaa"/>
     <padding
         android:bottom="1dp"
         android:left="1dp"
