--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -2,32 +2,34 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/rootFl"
              android:layout_width="match_parent"
-             android:layout_height="match_parent" >
+             android:layout_height="match_parent"
+    >
 
     <LinearLayout
+        android:id="@+id/llbg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#000"
-        android:padding="16dp" >
+        android:background="@drawable/wood_bg"
+        android:padding="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.1"
                 android:gravity="center"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.7"
                     android:gravity="center"
-                    android:orientation="vertical" >
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/tvIdleMsg"
@@ -37,7 +39,7 @@
                         android:gravity="center"
                         android:text="loading"
                         android:textColor="#fff"
-                        android:textSize="10sp" />
+                        android:textSize="10sp"/>
 
                     <TextView
                         android:id="@+id/tvMyMoney"
@@ -47,8 +49,7 @@
                         android:gravity="center"
                         android:text="loading"
                         android:textColor="#fff"
-                        android:textSize="16sp" />
-
+                        android:textSize="16sp"/>
                 </LinearLayout>
 
                 <Button
@@ -56,143 +57,217 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.3"
-                    android:text="inven" />
+                    android:text="inven"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.2"
-                android:gravity="center">
+                android:orientation="horizontal">
 
-                <FrameLayout
-                    android:layout_width="200dp"
-                    android:layout_height="match_parent">
-
-                <ImageView
-                    android:id="@+id/ivMineObj"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:src="@drawable/loc_wood"
-                    android:layout_gravity="left"/>
+                    android:layout_weight="0.6"
+                    android:gravity="center">
 
-                <ImageView
-                    android:id="@+id/ivMineWorker"
-                    android:layout_width="wrap_content"
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:id="@+id/ivMineObj"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:src="@drawable/loc_wood"/>
+
+                        <ImageView
+                            android:id="@+id/ivMineWorker"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="right"
+                            android:layout_weight="1"
+                            android:paddingRight="10dp"
+                            android:paddingTop="40dp"
+                            android:src="@drawable/mineworker"/>
+                    </FrameLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:paddingTop="40dp"
-                    android:paddingRight="10dp"
-                    android:src="@drawable/mineworker"
-                    android:layout_gravity="right"/>
+                    android:layout_weight="0.4"
+                    android:background="@drawable/border_orange"
+                    android:orientation="horizontal">
 
-                </FrameLayout>
+                    <ScrollView
+                        android:id="@+id/scrollSystemMsg"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:visibility="gone">
+
+                        <TextView
+                            android:id="@+id/tvSystemMsg"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:textColor="#fff"/>
+                    </ScrollView>
+
+                    <ListView
+                        android:id="@+id/lvSystemMsg"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:stackFromBottom="true"
+                        android:transcriptMode="alwaysScroll"/>
+                </LinearLayout>
             </LinearLayout>
 
-            <View
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="0.05" />
+                android:layout_weight="0.05"
+                android:paddingBottom="10dp">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.6"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/ivEquipItem"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@drawable/border_wp"
+                        android:src="@drawable/wp_slot"/>
+
+                    <ImageView
+                        android:id="@+id/ivLunchItem"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@drawable/border_wp"
+                        android:src="@drawable/rice"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.4"
+                    android:orientation="horizontal">
+                </LinearLayout>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.15"
-                android:gravity="center" >
+                android:gravity="center">
 
                 <ImageView
                     android:id="@+id/ivLoc1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:src="@drawable/loc_wood" />
+                    android:src="@drawable/loc_wood"/>
 
                 <ImageView
                     android:id="@+id/ivLoc2"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:src="@drawable/loc_stone" />
+                    android:src="@drawable/loc_stone"/>
 
                 <ImageView
                     android:id="@+id/ivLoc3"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:src="@drawable/loc_gold" />
+                    android:src="@drawable/loc_hunt"/>
             </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="0.02" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="0.1" >
+                android:layout_weight="0.02">
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.1">
 
                 <ImageView
                     android:id="@+id/ivCombine1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@drawable/border" />
+                    android:background="@drawable/border"/>
 
                 <ImageView
                     android:id="@+id/ivCombine2"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@drawable/border" />
+                    android:background="@drawable/border"/>
 
                 <ImageView
                     android:id="@+id/ivCombine3"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@drawable/border" />
+                    android:background="@drawable/border"/>
 
                 <ImageView
                     android:id="@+id/ivCombine4"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@drawable/border" />
+                    android:background="@drawable/border"/>
 
                 <ImageView
                     android:id="@+id/ivCombine5"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@drawable/border" />
+                    android:background="@drawable/border"/>
             </LinearLayout>
 
-            <View
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="0.05" />
+                android:layout_weight="0.05">
+
+                <CheckBox
+                    android:id="@+id/cbFastMix"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="5개 바로 조합"/>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.12"
-                android:gravity="center" >
+                android:gravity="center">
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:orientation="vertical" >
+                    android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/ivMaterial1"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="0.65"
-                        android:src="@drawable/wood" />
+                        android:src="@drawable/wood"/>
 
                     <TextView
                         android:id="@+id/tvMaterial1"
@@ -201,7 +276,7 @@
                         android:layout_weight="0.35"
                         android:gravity="center"
                         android:text="00"
-                        android:textColor="#fff" />
+                        android:textColor="#fff"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -209,14 +284,14 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:orientation="vertical" >
+                    android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/ivMaterial2"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="0.65"
-                        android:src="@drawable/stone" />
+                        android:src="@drawable/stone"/>
 
                     <TextView
                         android:id="@+id/tvMaterial2"
@@ -225,7 +300,7 @@
                         android:layout_weight="0.35"
                         android:gravity="center"
                         android:text="00"
-                        android:textColor="#fff" />
+                        android:textColor="#fff"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -233,14 +308,14 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:orientation="vertical" >
+                    android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/ivMaterial3"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="0.65"
-                        android:src="@drawable/gold" />
+                        android:src="@drawable/chicken"/>
 
                     <TextView
                         android:id="@+id/tvMaterial3"
@@ -249,17 +324,95 @@
                         android:layout_weight="0.35"
                         android:gravity="center"
                         android:text="00"
-                        android:textColor="#fff" />
+                        android:textColor="#fff"/>
                 </LinearLayout>
 
-                <Button
-                    android:id="@+id/btnMix"
+                <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="Mix" />
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivMaterial4"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.65"
+                        android:src="@drawable/apple"/>
+
+                    <TextView
+                        android:id="@+id/tvMaterial4"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.35"
+                        android:gravity="center"
+                        android:text="00"
+                        android:textColor="#fff"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivMaterial5"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.65"
+                        android:src="@drawable/gold"/>
+
+                    <TextView
+                        android:id="@+id/tvMaterial5"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.35"
+                        android:gravity="center"
+                        android:text="00"
+                        android:textColor="#fff"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivMaterial6"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.65"
+                        android:src="@drawable/pig"/>
+
+                    <TextView
+                        android:id="@+id/tvMaterial6"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.35"
+                        android:gravity="center"
+                        android:text="00"
+                        android:textColor="#fff"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/btnMix"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Mix"/>
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
 </FrameLayout>
