--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -315,6 +315,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:background="@drawable/material_bg"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -339,6 +340,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:background="@drawable/material_bg"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -363,6 +365,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:background="@drawable/material_bg"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -387,6 +390,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:background="@drawable/material_bg"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -411,6 +415,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:background="@drawable/material_bg"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -435,6 +440,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:background="@drawable/material_bg"
                     android:gravity="center"
                     android:orientation="vertical">
 
