--- a/app/src/main/res/layout/act_inven.xml
+++ b/app/src/main/res/layout/act_inven.xml
@@ -22,19 +22,19 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/border"/>
+                android:background="@drawable/border_item_bg"/>
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/border"/>
+                android:background="@drawable/border_item_bg"/>
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/border"/>
+                android:background="@drawable/border_item_bg"/>
         </LinearLayout>
 
         <LinearLayout
@@ -46,19 +46,19 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/border"/>
+                android:background="@drawable/border_item_bg"/>
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/border"/>
+                android:background="@drawable/border_item_bg"/>
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/border"/>
+                android:background="@drawable/border_item_bg"/>
         </LinearLayout>
 
         <LinearLayout
@@ -70,19 +70,19 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/border"/>
+                android:background="@drawable/border_item_bg"/>
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/border"/>
+                android:background="@drawable/border_item_bg"/>
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/border"/>
+                android:background="@drawable/border_item_bg"/>
         </LinearLayout>
     </LinearLayout>
 
